catkin_ws/logs/frontend/build.make.121.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:310:1: warning: multi-line comment [-Wcomment]
 //    cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
 ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:16:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Mapping.h: In constructor ‘SLAM::Mapping::Mapping(SLAM::IFeatures*, SLAM::ITransformMatEst*, SLAM::IPoseGraph*, RosHandler*, SLAM::IMap*)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Mapping.h:181:14: warning: ‘SLAM::Mapping::px4’ will be initialized after [-Wreorder]
  RosHandler* px4; // pixhawk communication via mavros
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Mapping.h:180:8: warning:   ‘SLAM::IMap* SLAM::Mapping::map3d’ [-Wreorder]
  IMap* map3d;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:31:1: warning:   when initialized here [-Wreorder]
 Mapping::Mapping(
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:276:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:511:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::updateMap()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:733:36: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i = 0; i < keyFrames.size(); ++i)
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:205:16: error: ‘class SLAM::PointCloudMap’ has no member named ‘startMapViewer’
  pointCloudMap.startMapViewer();
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:288:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:319:48: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i<slam.getKeyFrames().size();i++)
                                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:335:18: error: ‘class SLAM::PointCloudMap’ has no member named ‘updateMapViewer’
    pointCloudMap.updateMapViewer();
                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:351:16: error: ‘class SLAM::PointCloudMap’ has no member named ‘updateMapViewer’
  pointCloudMap.updateMapViewer();
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:367:16: error: ‘class SLAM::PointCloudMap’ has no member named ‘showMap’
  pointCloudMap.showMap();
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:368:16: error: ‘class SLAM::PointCloudMap’ has no member named ‘stopMapViewer’
  pointCloudMap.stopMapViewer();
                ^
make[2]: *** [CMakeFiles/frontend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
